Added new table

--- a/RW1.ipynb
+++ b/RW1.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-13T17:33:45.527085Z",
-     "start_time": "2025-02-13T17:33:45.520788Z"
+     "end_time": "2025-02-19T14:31:38.981941Z",
+     "start_time": "2025-02-19T14:31:38.969125Z"
     }
    },
    "cell_type": "code",
@@ -17,13 +17,13 @@
    ],
    "id": "e2bcf81eb9dcd90a",
    "outputs": [],
-   "execution_count": 42
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-13T17:33:46.389465Z",
-     "start_time": "2025-02-13T17:33:46.313900Z"
+     "end_time": "2025-02-19T14:31:39.713660Z",
+     "start_time": "2025-02-19T14:31:39.124370Z"
     }
    },
    "cell_type": "code",
@@ -34,7 +34,7 @@
    ],
    "id": "6e08191c54627058",
    "outputs": [],
-   "execution_count": 43
+   "execution_count": 7
   },
   {
    "metadata": {},
@@ -45,8 +45,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-13T17:33:46.937249Z",
-     "start_time": "2025-02-13T17:33:46.918576Z"
+     "end_time": "2025-02-19T14:31:39.815763Z",
+     "start_time": "2025-02-19T14:31:39.794998Z"
     }
    },
    "cell_type": "code",
@@ -159,18 +159,18 @@
        "</div>"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 44
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-13T17:33:47.452913Z",
-     "start_time": "2025-02-13T17:33:47.412226Z"
+     "end_time": "2025-02-19T14:31:40.146424Z",
+     "start_time": "2025-02-19T14:31:40.095988Z"
     }
    },
    "cell_type": "code",
@@ -316,12 +316,12 @@
        "</div>"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 45
+   "execution_count": 9
   },
   {
    "metadata": {},
@@ -332,21 +332,21 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-13T17:33:49.052220Z",
-     "start_time": "2025-02-13T17:33:49.028978Z"
+     "end_time": "2025-02-19T14:31:40.358151Z",
+     "start_time": "2025-02-19T14:31:40.338605Z"
     }
    },
    "cell_type": "code",
    "source": "ISBG[\"sum\"] = ISBG.apply(lambda row: row[\"COSMIC Entry\"] + row[\"COSMIC Exit\"] + row[\"COSMIC Read\"] + row[\"COSMIC Write\"], axis=1)\n",
    "id": "75ec95e275300a5b",
    "outputs": [],
-   "execution_count": 46
+   "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-13T17:33:49.897445Z",
-     "start_time": "2025-02-13T17:33:49.874727Z"
+     "end_time": "2025-02-19T14:31:40.559390Z",
+     "start_time": "2025-02-19T14:31:40.547507Z"
     }
    },
    "cell_type": "code",
@@ -371,18 +371,18 @@
        "Name: Functional Size, Length: 250, dtype: int64"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 47
+   "execution_count": 11
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-13T17:37:08.134449Z",
-     "start_time": "2025-02-13T17:37:07.401837Z"
+     "end_time": "2025-02-19T14:31:41.412895Z",
+     "start_time": "2025-02-19T14:31:40.810933Z"
     }
    },
    "cell_type": "code",
@@ -420,7 +420,7 @@
        "<Axes: xlabel='Project ID', ylabel='difference'>"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -435,7 +435,31 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 56
+   "execution_count": 12
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-19T14:31:41.466621Z",
+     "start_time": "2025-02-19T14:31:41.456282Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "# ISBG['difference'].sum()",
+   "id": "280ae47133ee1049",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(232)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 13
   },
   {
    "metadata": {},
