Update for comparison (not done)

--- a/updated.ipynb
+++ b/updated.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 55,
    "id": "e72e1303",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 56,
    "id": "ea62fefa",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 57,
    "id": "4fe3594c",
    "metadata": {},
    "outputs": [
@@ -274,7 +274,7 @@
        "[5 rows x 130 columns]"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 58,
    "id": "050f5ba3",
    "metadata": {},
    "outputs": [
@@ -423,7 +423,7 @@
        "4                        COBOL              22000.0  "
       ]
      },
-     "execution_count": 99,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 59,
    "id": "7434289a",
    "metadata": {},
    "outputs": [
@@ -486,19 +486,18 @@
    "id": "0c5c793a",
    "metadata": {},
    "source": [
-    "## One-hot encoding + Train-test split (80-20)"
+    "## Train-test split (80-20)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 60,
    "id": "81d35900",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "df_clean = pd.get_dummies(df_clean)\n",
     "X_clean = df_clean.drop(columns=[\"Summary Work Effort\"])\n",
     "y_clean = df_clean[\"Summary Work Effort\"]\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
@@ -516,19 +515,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 61,
    "id": "e5341a27",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
     "from sklearn.impute import KNNImputer\n",
+    "import pandas as pd\n",
     "\n",
+    "# 1. Separate numerical and categorical columns\n",
+    "num_cols = X_train.select_dtypes(include='number').columns\n",
+    "cat_cols = X_train.select_dtypes(exclude='number').columns\n",
+    "\n",
+    "X_num_train = X_train[num_cols]\n",
+    "X_num_test = X_test[num_cols]\n",
+    "\n",
+    "X_cat_train = X_train[cat_cols]\n",
+    "X_cat_test = X_test[cat_cols]\n",
+    "\n",
+    "# 2. Apply imputation only to numeric columns\n",
     "imputer = KNNImputer(n_neighbors=5)\n",
     "\n",
-    "# Fit the imputer on the training data and transform both train and test sets\n",
-    "X_train_imputed = imputer.fit_transform(X_train)\n",
-    "X_test_imputed = imputer.transform(X_test)  # Apply the same transformation to the test set\n"
+    "X_num_train_imputed = pd.DataFrame(imputer.fit_transform(X_num_train), columns=num_cols, index=X_train.index)\n",
+    "X_num_test_imputed = pd.DataFrame(imputer.transform(X_num_test), columns=num_cols, index=X_test.index)\n",
+    "\n",
+    "# 3. Recombine imputed numeric and original categorical columns\n",
+    "X_train_imputed = pd.concat([X_num_train_imputed, X_cat_train], axis=1)\n",
+    "X_test_imputed = pd.concat([X_num_test_imputed, X_cat_test], axis=1)\n"
    ]
   },
   {
@@ -541,15 +554,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 62,
    "id": "74609126",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
+    "# 1. Get numeric columns again (same as before)\n",
+    "num_cols = X_train_imputed.select_dtypes(include='number').columns\n",
+    "cat_cols = X_train_imputed.select_dtypes(exclude='number').columns\n",
+    "\n",
+    "# 2. Scale only numeric part\n",
     "scaler = MinMaxScaler()\n",
-    "X_train = scaler.fit_transform(X_train_imputed)\n",
-    "X_test = scaler.transform(X_test_imputed)\n"
+    "X_num_train_scaled = pd.DataFrame(scaler.fit_transform(X_train_imputed[num_cols]), columns=num_cols, index=X_train_imputed.index)\n",
+    "X_num_test_scaled = pd.DataFrame(scaler.transform(X_test_imputed[num_cols]), columns=num_cols, index=X_test_imputed.index)\n",
+    "\n",
+    "# 3. Combine with categorical part\n",
+    "X_train_final = pd.concat([X_num_train_scaled, X_train_imputed[cat_cols]], axis=1)\n",
+    "X_test_final = pd.concat([X_num_test_scaled, X_test_imputed[cat_cols]], axis=1)\n"
    ]
   },
   {
@@ -562,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 63,
    "id": "2f65ce97",
    "metadata": {},
    "outputs": [],
@@ -570,6 +593,72 @@
     "y_train = np.log(y_train + 1)\n",
     "y_test = np.log(y_test + 1)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e69c746a",
+   "metadata": {},
+   "source": [
+    "## Split into technical and functional"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "3ea67fe5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Technical features (some are categorical)\n",
+    "tech_features = [\"Development Platform\", \"Primary Programming Language\", \n",
+    "                 \"Project Elapsed Time\", \"Max Team Size\"]\n",
+    "\n",
+    "# Functional features (all numerical)\n",
+    "functional_features = [\"COSMIC Read\", \"COSMIC Write\", \"COSMIC Entry\", \"COSMIC Exit\"]\n",
+    "\n",
+    "# Split training and test sets\n",
+    "X_tech_train = X_train_final[tech_features]\n",
+    "X_tech_test = X_test_final[tech_features]\n",
+    "\n",
+    "X_func_train = X_train_final[functional_features]\n",
+    "X_func_test = X_test_final[functional_features]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "10c18d98",
+   "metadata": {},
+   "source": [
+    "## One-hot encoding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "945b98e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 1: Define column groups\n",
+    "tech_features = [\"Development Platform\", \"Primary Programming Language\", \n",
+    "                 \"Project Elapsed Time\", \"Max Team Size\"]\n",
+    "\n",
+    "tech_cat_cols = [\"Development Platform\", \"Primary Programming Language\"]\n",
+    "tech_num_cols = [\"Project Elapsed Time\", \"Max Team Size\"]\n",
+    "\n",
+    "# Step 2: Separate features\n",
+    "X_tech_train = X_train_final[tech_features]\n",
+    "X_tech_test = X_test_final[tech_features]\n",
+    "\n",
+    "# Step 3: Dummy coding for categorical features\n",
+    "X_tech_train_dummies = pd.get_dummies(X_tech_train, columns=tech_cat_cols, drop_first=True)\n",
+    "X_tech_test_dummies = pd.get_dummies(X_tech_test, columns=tech_cat_cols, drop_first=True)\n",
+    "\n",
+    "# Step 4: Align columns in case some dummies are missing in the test set\n",
+    "X_tech_train_final, X_tech_test_final = X_tech_train_dummies.align(\n",
+    "    X_tech_test_dummies, join='left', axis=1, fill_value=0\n",
+    ")\n"
    ]
   },
   {
@@ -590,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 68,
    "id": "b0fda7b0",
    "metadata": {},
    "outputs": [
@@ -598,9 +687,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R2 (mean ± std): 0.5168 ± 0.2182\n",
-      "MAE (mean ± std): 0.9580 ± 0.1407\n",
-      "MSE (mean ± std): 1.8604 ± 0.7171\n"
+      "\n",
+      "--- Functional Approach ---\n",
+      "R2 (mean ± std): 0.2307 ± 0.2286\n",
+      "MAE (mean ± std): 1.3134 ± 0.1546\n",
+      "MSE (mean ± std): 2.9481 ± 0.5227\n",
+      "\n",
+      "--- Technical Approach ---\n",
+      "R2 (mean ± std): 0.6168 ± 0.1087\n",
+      "MAE (mean ± std): 0.8856 ± 0.1393\n",
+      "MSE (mean ± std): 1.5112 ± 0.3858\n"
      ]
     }
    ],
@@ -612,7 +708,7 @@
     "\n",
     "# Define model\n",
     "dt = DecisionTreeRegressor(random_state=42)\n",
-    "\n",
+    "\"\"\"\"\"\n",
     "# Define scoring metrics (on log scale)\n",
     "scoring = {\n",
     "    'r2': 'r2',\n",
@@ -634,7 +730,32 @@
     "for metric in scoring:\n",
     "    scores = cv_results[f'test_{metric}']\n",
     "    print(f\"{metric.upper()} (mean ± std): {scores.mean():.4f} ± {scores.std():.4f}\")\n",
-    "\n"
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "def evaluate_model(X, y, model=None, label=\"\"):\n",
+    "    if model is None:\n",
+    "        model = DecisionTreeRegressor(random_state=42)\n",
+    "\n",
+    "    scoring = {\n",
+    "        'r2': 'r2',\n",
+    "        'mae': make_scorer(mean_absolute_error),\n",
+    "        'mse': make_scorer(mean_squared_error),\n",
+    "    }\n",
+    "\n",
+    "    results = cross_validate(model, X, y, cv=10, scoring=scoring, return_train_score=False)\n",
+    "\n",
+    "    print(f\"\\n--- {label} ---\")\n",
+    "    for metric in scoring:\n",
+    "        scores = results[f'test_{metric}']\n",
+    "        print(f\"{metric.upper()} (mean ± std): {scores.mean():.4f} ± {scores.std():.4f}\")\n",
+    "\n",
+    "\n",
+    "# Functional features only\n",
+    "evaluate_model(X_func_train, y_train, label=\"Functional Approach\")\n",
+    "\n",
+    "# Technical features (with dummy-coded categoricals)\n",
+    "evaluate_model(X_tech_train_final, y_train, label=\"Technical Approach\")\n"
    ]
   },
   {
