--- a/updated.ipynb
+++ b/updated.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 1,
    "id": "e72e1303",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 2,
    "id": "ea62fefa",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 3,
    "id": "4fe3594c",
    "metadata": {},
    "outputs": [
@@ -274,7 +274,7 @@
        "[5 rows x 130 columns]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 4,
    "id": "050f5ba3",
    "metadata": {},
    "outputs": [
@@ -423,7 +423,7 @@
        "4                        COBOL              22000.0  "
       ]
      },
-     "execution_count": 58,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 5,
    "id": "7434289a",
    "metadata": {},
    "outputs": [
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 6,
    "id": "81d35900",
    "metadata": {},
    "outputs": [],
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 7,
    "id": "e5341a27",
    "metadata": {},
    "outputs": [],
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 8,
    "id": "74609126",
    "metadata": {},
    "outputs": [],
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 9,
    "id": "2f65ce97",
    "metadata": {},
    "outputs": [],
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 10,
    "id": "3ea67fe5",
    "metadata": {},
    "outputs": [],
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 11,
    "id": "945b98e5",
    "metadata": {},
    "outputs": [],
@@ -656,7 +656,7 @@
     "X_tech_test_dummies = pd.get_dummies(X_tech_test, columns=tech_cat_cols, drop_first=True)\n",
     "\n",
     "# Step 4: Align columns in case some dummies are missing in the test set\n",
-    "X_tech_train_final, X_tech_test_final = X_tech_train_dummies.align(\n",
+    "X_tech_train, X_tech_test = X_tech_train_dummies.align(\n",
     "    X_tech_test_dummies, join='left', axis=1, fill_value=0\n",
     ")\n"
    ]
@@ -679,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 12,
    "id": "b0fda7b0",
    "metadata": {},
    "outputs": [
@@ -755,7 +755,7 @@
     "evaluate_model(X_func_train, y_train, label=\"Functional Approach\")\n",
     "\n",
     "# Technical features (with dummy-coded categoricals)\n",
-    "evaluate_model(X_tech_train_final, y_train, label=\"Technical Approach\")\n"
+    "evaluate_model(X_tech_train, y_train, label=\"Technical Approach\")\n"
    ]
   },
   {
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 21,
    "id": "cda0eb77",
    "metadata": {},
    "outputs": [
@@ -776,46 +776,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R2: 0.4861585253761862\n",
-      "MAE: 1.2718073116767725\n",
-      "MSE: 2.5450506063862206\n",
-      "RMSE: 1.5953214743073638\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\maria\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (100) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n"
+      "\n",
+      "--- Functional Approach (MLP) ---\n",
+      "R2 (mean ± std): 0.5004 ± 0.1742\n",
+      "MAE (mean ± std): 1.1110 ± 0.1760\n",
+      "MSE (mean ± std): 1.9717 ± 0.6424\n",
+      "\n",
+      "--- Technical Approach (MLP) ---\n",
+      "R2 (mean ± std): 0.6568 ± 0.0968\n",
+      "MAE (mean ± std): 0.8903 ± 0.1186\n",
+      "MSE (mean ± std): 1.3595 ± 0.3888\n"
      ]
     }
    ],
    "source": [
     "from sklearn.neural_network import MLPRegressor\n",
-    "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n",
-    "import numpy as np\n",
+    "import warnings\n",
+    "from sklearn.exceptions import ConvergenceWarning\n",
     "\n",
-    "# Define the ANN model using MLPRegressor\n",
-    "mlp = MLPRegressor(hidden_layer_sizes=(64, 32), activation='relu', max_iter=100, random_state=42)\n",
+    "# Suppress only the convergence warnings\n",
+    "warnings.filterwarnings(\"ignore\", category=ConvergenceWarning)\n",
     "\n",
-    "# Train the model\n",
-    "mlp.fit(X_train, y_train)\n",
+    "# Define the MLPRegressor model (you can adjust the hyperparameters as needed)\n",
+    "mlp = MLPRegressor(hidden_layer_sizes=(50, 50), activation='tanh', solver='adam', max_iter=1000, random_state=42, early_stopping=False)\n",
     "\n",
-    "# Make predictions\n",
-    "y_pred = mlp.predict(X_test)\n",
+    "# Functional features only\n",
+    "evaluate_model(X_func_train, y_train, model=mlp, label=\"Functional Approach (MLP)\")\n",
     "\n",
-    "# Calculate performance metrics\n",
-    "r2 = r2_score(y_test, y_pred)\n",
-    "mae = mean_absolute_error(y_test, y_pred)\n",
-    "mse = mean_squared_error(y_test, y_pred)\n",
-    "rmse = np.sqrt(mse)\n",
-    "\n",
-    "# Print the metrics\n",
-    "print(f\"R2: {r2}\")\n",
-    "print(f\"MAE: {mae}\")\n",
-    "print(f\"MSE: {mse}\")\n",
-    "print(f\"RMSE: {rmse}\")\n"
+    "# Technical features only\n",
+    "evaluate_model(X_tech_train, y_train, model=mlp, label=\"Technical Approach (MLP)\")\n"
    ]
   },
   {
@@ -828,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 39,
    "id": "a50a4877",
    "metadata": {},
    "outputs": [
@@ -836,10 +825,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R²: 0.8109120070741871\n",
-      "MAE: 0.735403711049847\n",
-      "MSE: 0.9365505410175595\n",
-      "RMSE: 0.9677554138404805\n"
+      "\n",
+      "--- Functional Approach (XGBoost) ---\n",
+      "R2 (mean ± std): 0.5825 ± 0.1204\n",
+      "MAE (mean ± std): 1.0100 ± 0.1415\n",
+      "MSE (mean ± std): 1.6513 ± 0.5051\n",
+      "\n",
+      "--- Technical Approach (XGBoost) ---\n",
+      "R2 (mean ± std): 0.7134 ± 0.0895\n",
+      "MAE (mean ± std): 0.8255 ± 0.2037\n",
+      "MSE (mean ± std): 1.1684 ± 0.4368\n",
+      "\n",
+      "--- Technical Approach w/o Project Elapsed Time (XGBoost) ---\n",
+      "R2 (mean ± std): 0.6143 ± 0.1031\n",
+      "MAE (mean ± std): 0.9686 ± 0.1919\n",
+      "MSE (mean ± std): 1.5368 ± 0.4573\n"
      ]
     }
    ],
@@ -848,31 +848,40 @@
     "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n",
     "\n",
     "# Define the XGBoost model\n",
-    "xg_reg = xgb.XGBRegressor(objective='reg:squarederror', \n",
-    "                          colsample_bytree=0.3, \n",
-    "                          learning_rate=0.1, \n",
-    "                          max_depth=5, \n",
-    "                          alpha=10, \n",
-    "                          n_estimators=100, \n",
-    "                          random_state=42)\n",
+    "xg_reg = xgb.XGBRegressor(\n",
+    "    objective='reg:squarederror', \n",
+    "    colsample_bytree=0.3, \n",
+    "    learning_rate=0.6,\n",
+    "    max_depth=10, \n",
+    "    alpha=10, \n",
+    "    n_estimators=100, \n",
+    "    verbosity=0, \n",
+    "    random_state=42\n",
+    ")\n",
     "\n",
-    "# Train the model\n",
-    "xg_reg.fit(X_train, y_train)\n",
+    "# Evaluate functional approach with XGBoost\n",
+    "evaluate_model(X_func_train, y_train, model=xg_reg, label=\"Functional Approach (XGBoost)\")\n",
     "\n",
-    "# Make predictions\n",
-    "y_pred = xg_reg.predict(X_test)\n",
+    "# Evaluate technical approach with XGBoost\n",
+    "evaluate_model(X_tech_train, y_train, model=xg_reg, label=\"Technical Approach (XGBoost)\")\n",
     "\n",
-    "# Calculate performance metrics\n",
-    "r2 = r2_score(y_test, y_pred)\n",
-    "mae = mean_absolute_error(y_test, y_pred)\n",
-    "mse = mean_squared_error(y_test, y_pred)\n",
-    "rmse = np.sqrt(mse)\n",
     "\n",
-    "# Print the metrics\n",
-    "print(f\"R²: {r2}\")\n",
-    "print(f\"MAE: {mae}\")\n",
-    "print(f\"MSE: {mse}\")\n",
-    "print(f\"RMSE: {rmse}\")\n"
+    "# Evaluate technical approach without Project Elapsed Time using XGBoost\n",
+    "evaluate_model(\n",
+    "    X_tech_train.drop(columns=['Project Elapsed Time']), \n",
+    "    y_train, \n",
+    "    model=xgb.XGBRegressor(\n",
+    "        objective='reg:squarederror',\n",
+    "        colsample_bytree=0.3,\n",
+    "        learning_rate=0.3,\n",
+    "        max_depth=10,\n",
+    "        alpha=10,\n",
+    "        n_estimators=100,\n",
+    "        verbosity=0,\n",
+    "        random_state=42\n",
+    "    ),\n",
+    "    label=\"Technical Approach w/o Project Elapsed Time (XGBoost)\"\n",
+    ")\n"
    ]
   }
  ],
