--- a/after_reading.ipynb
+++ b/after_reading.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "id": "b62b6306",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "id": "5a84f045",
    "metadata": {},
    "outputs": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "id": "a72bdf8a",
    "metadata": {},
    "outputs": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "id": "53d23277",
    "metadata": {},
    "outputs": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "id": "9eddc648",
    "metadata": {},
    "outputs": [],
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "id": "b36314ad",
    "metadata": {},
    "outputs": [
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "id": "3c000bc0",
    "metadata": {},
    "outputs": [
@@ -395,7 +395,12 @@
       "--- Technical Approach ---\n",
       "R2 (mean ± std): 0.6136 ± 0.1114\n",
       "MAE (mean ± std): 0.8973 ± 0.1895\n",
-      "MSE (mean ± std): 1.5838 ± 0.6205\n"
+      "MSE (mean ± std): 1.5838 ± 0.6205\n",
+      "\n",
+      "--- Both ---\n",
+      "R2 (mean ± std): 0.6351 ± 0.1038\n",
+      "MAE (mean ± std): 0.9026 ± 0.1369\n",
+      "MSE (mean ± std): 1.4132 ± 0.3140\n"
      ]
     }
    ],
@@ -454,12 +459,15 @@
     "evaluate_model(X_func_train, y_train, label=\"Functional Approach\")\n",
     "\n",
     "# Technical features (with dummy-coded categoricals)\n",
-    "evaluate_model(X_tech_train, y_train, label=\"Technical Approach\")\n"
+    "evaluate_model(X_tech_train, y_train, label=\"Technical Approach\")\n",
+    "\n",
+    "# Both\n",
+    "evaluate_model(X_train, y_train, label=\"Both\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "id": "6ee0a889",
    "metadata": {},
    "outputs": [
@@ -476,7 +484,12 @@
       "--- Technical Approach (MLP) ---\n",
       "R2 (mean ± std): 0.6851 ± 0.0998\n",
       "MAE (mean ± std): 0.8297 ± 0.1532\n",
-      "MSE (mean ± std): 1.2729 ± 0.4816\n"
+      "MSE (mean ± std): 1.2729 ± 0.4816\n",
+      "\n",
+      "--- Both MLP ---\n",
+      "R2 (mean ± std): 0.8061 ± 0.0754\n",
+      "MAE (mean ± std): 0.6477 ± 0.1160\n",
+      "MSE (mean ± std): 0.7685 ± 0.3116\n"
      ]
     }
    ],
@@ -495,12 +508,15 @@
     "evaluate_model(X_func_train, y_train, model=mlp, label=\"Functional Approach (MLP)\")\n",
     "\n",
     "# Technical features only\n",
-    "evaluate_model(X_tech_train, y_train, model=mlp, label=\"Technical Approach (MLP)\")\n"
+    "evaluate_model(X_tech_train, y_train, model=mlp, label=\"Technical Approach (MLP)\")\n",
+    "\n",
+    "# Technical features only\n",
+    "evaluate_model(X_train, y_train, model=mlp, label=\"Both MLP\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "7e67e4f3",
    "metadata": {},
    "outputs": [
@@ -518,6 +534,11 @@
       "R2 (mean ± std): 0.6679 ± 0.0942\n",
       "MAE (mean ± std): 0.8393 ± 0.1599\n",
       "MSE (mean ± std): 1.3311 ± 0.4410\n",
+      "\n",
+      "--- Technical Approach (XGBoost) ---\n",
+      "R2 (mean ± std): 0.7362 ± 0.0553\n",
+      "MAE (mean ± std): 0.8035 ± 0.0693\n",
+      "MSE (mean ± std): 1.0352 ± 0.1774\n",
       "\n",
       "--- Technical Approach w/o Project Elapsed Time (XGBoost) ---\n",
       "R2 (mean ± std): 0.6203 ± 0.1140\n",
@@ -548,6 +569,8 @@
     "# Evaluate technical approach with XGBoost\n",
     "evaluate_model(X_tech_train, y_train, model=xg_reg, label=\"Technical Approach (XGBoost)\")\n",
     "\n",
+    "# Evaluate technical approach with XGBoost\n",
+    "evaluate_model(X_train, y_train, model=xg_reg, label=\"Both (XGBoost)\")\n",
     "\n",
     "# Evaluate technical approach without Project Elapsed Time using XGBoost\n",
     "evaluate_model(\n",
