--- a/after_reading.ipynb
+++ b/after_reading.ipynb
@@ -387,82 +387,80 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "--- Functional Approach ---\n",
+      "--- Functional Approach (Cross-Validation on Train Set) ---\n",
       "R2 (mean ± std): 0.1972 ± 0.2555\n",
       "MAE (mean ± std): 1.3450 ± 0.1467\n",
       "MSE (mean ± std): 3.0674 ± 0.5853\n",
       "\n",
-      "--- Technical Approach ---\n",
+      "--- Functional Approach (Test Set) ---\n",
+      "R2:  0.4143\n",
+      "MAE: 1.2278\n",
+      "MSE: 2.9011\n",
+      "\n",
+      "--- Technical Approach (Cross-Validation on Train Set) ---\n",
       "R2 (mean ± std): 0.6136 ± 0.1114\n",
       "MAE (mean ± std): 0.8973 ± 0.1895\n",
       "MSE (mean ± std): 1.5838 ± 0.6205\n",
       "\n",
-      "--- Both ---\n",
+      "--- Technical Approach (Test Set) ---\n",
+      "R2:  0.7978\n",
+      "MAE: 0.7522\n",
+      "MSE: 1.0013\n",
+      "\n",
+      "--- Both (Cross-Validation on Train Set) ---\n",
       "R2 (mean ± std): 0.6351 ± 0.1038\n",
       "MAE (mean ± std): 0.9026 ± 0.1369\n",
-      "MSE (mean ± std): 1.4132 ± 0.3140\n"
+      "MSE (mean ± std): 1.4132 ± 0.3140\n",
+      "\n",
+      "--- Both (Test Set) ---\n",
+      "R2:  0.7743\n",
+      "MAE: 0.8059\n",
+      "MSE: 1.1180\n"
      ]
     }
    ],
    "source": [
     "from sklearn.model_selection import cross_validate\n",
-    "from sklearn.metrics import make_scorer, mean_absolute_error, mean_squared_error\n",
+    "from sklearn.metrics import make_scorer, mean_absolute_error, mean_squared_error, r2_score\n",
     "from sklearn.tree import DecisionTreeRegressor\n",
     "import numpy as np\n",
     "\n",
-    "# Define model\n",
-    "dt = DecisionTreeRegressor(random_state=42)\n",
-    "\"\"\"\"\"\n",
-    "# Define scoring metrics (on log scale)\n",
+    "# Define scoring metrics\n",
     "scoring = {\n",
     "    'r2': 'r2',\n",
     "    'mae': make_scorer(mean_absolute_error),\n",
     "    'mse': make_scorer(mean_squared_error),\n",
     "}\n",
     "\n",
-    "# Run 5-fold cross-validation\n",
-    "cv_results = cross_validate(\n",
-    "    dt,\n",
-    "    X_train,\n",
-    "    y_train,  # log-transformed SWE\n",
-    "    cv=10,\n",
-    "    scoring=scoring,\n",
-    "    return_train_score=False\n",
-    ")\n",
-    "\n",
-    "# Show average scores\n",
-    "for metric in scoring:\n",
-    "    scores = cv_results[f'test_{metric}']\n",
-    "    print(f\"{metric.upper()} (mean ± std): {scores.mean():.4f} ± {scores.std():.4f}\")\n",
-    "\n",
-    "\"\"\"\n",
-    "\n",
-    "def evaluate_model(X, y, model=None, label=\"\"):\n",
+    "def evaluate_model(X_train, y_train, X_test, y_test, model=None, label=\"\"):\n",
     "    if model is None:\n",
     "        model = DecisionTreeRegressor(random_state=42)\n",
     "\n",
-    "    scoring = {\n",
-    "        'r2': 'r2',\n",
-    "        'mae': make_scorer(mean_absolute_error),\n",
-    "        'mse': make_scorer(mean_squared_error),\n",
-    "    }\n",
+    "    # Cross-validation\n",
+    "    cv_results = cross_validate(model, X_train, y_train, cv=10, scoring=scoring, return_train_score=False)\n",
     "\n",
-    "    results = cross_validate(model, X, y, cv=10, scoring=scoring, return_train_score=False)\n",
-    "\n",
-    "    print(f\"\\n--- {label} ---\")\n",
+    "    print(f\"\\n--- {label} (Cross-Validation on Train Set) ---\")\n",
     "    for metric in scoring:\n",
-    "        scores = results[f'test_{metric}']\n",
+    "        scores = cv_results[f'test_{metric}']\n",
     "        print(f\"{metric.upper()} (mean ± std): {scores.mean():.4f} ± {scores.std():.4f}\")\n",
     "\n",
+    "    # Fit on full training set and evaluate on test set\n",
+    "    model.fit(X_train, y_train)\n",
+    "    y_pred = model.predict(X_test)\n",
+    "\n",
+    "    print(f\"\\n--- {label} (Test Set) ---\")\n",
+    "    print(f\"R2:  {r2_score(y_test, y_pred):.4f}\")\n",
+    "    print(f\"MAE: {mean_absolute_error(y_test, y_pred):.4f}\")\n",
+    "    print(f\"MSE: {mean_squared_error(y_test, y_pred):.4f}\")\n",
     "\n",
     "# Functional features only\n",
-    "evaluate_model(X_func_train, y_train, label=\"Functional Approach\")\n",
+    "evaluate_model(X_func_train, y_train, X_func_test, y_test, label=\"Functional Approach\")\n",
     "\n",
-    "# Technical features (with dummy-coded categoricals)\n",
-    "evaluate_model(X_tech_train, y_train, label=\"Technical Approach\")\n",
+    "# Technical features\n",
+    "evaluate_model(X_tech_train, y_train, X_tech_test, y_test, label=\"Technical Approach\")\n",
     "\n",
     "# Both\n",
-    "evaluate_model(X_train, y_train, label=\"Both\")"
+    "evaluate_model(X_train, y_train, X_test, y_test, label=\"Both\")\n"
    ]
   },
   {
