--- a/after_reading.ipynb
+++ b/after_reading.ipynb
@@ -2,7 +2,94 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
+   "id": "7b47e504",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting pandas==1.5.3 (from -r requirements.txt (line 1))\n",
+      "  Using cached pandas-1.5.3.tar.gz (5.2 MB)\n",
+      "  Installing build dependencies: started\n",
+      "  Installing build dependencies: finished with status 'done'\n",
+      "  Getting requirements to build wheel: started\n",
+      "  Getting requirements to build wheel: still running...\n",
+      "  Getting requirements to build wheel: still running...\n",
+      "  Getting requirements to build wheel: finished with status 'done'\n",
+      "  Preparing metadata (pyproject.toml): started\n",
+      "  Preparing metadata (pyproject.toml): finished with status 'done'\n",
+      "Collecting numpy==1.24.3 (from -r requirements.txt (line 2))\n",
+      "  Using cached numpy-1.24.3.tar.gz (10.9 MB)\n",
+      "  Installing build dependencies: started\n",
+      "  Installing build dependencies: finished with status 'done'\n",
+      "  Getting requirements to build wheel: started\n",
+      "  Getting requirements to build wheel: finished with status 'error'\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  error: subprocess-exited-with-error\n",
+      "  \n",
+      "  × Getting requirements to build wheel did not run successfully.\n",
+      "  │ exit code: 1\n",
+      "  ╰─> [33 lines of output]\n",
+      "      Traceback (most recent call last):\n",
+      "        File \"C:\\Users\\maria\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pip\\_vendor\\pyproject_hooks\\_in_process\\_in_process.py\", line 389, in <module>\n",
+      "          main()\n",
+      "        File \"C:\\Users\\maria\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pip\\_vendor\\pyproject_hooks\\_in_process\\_in_process.py\", line 373, in main\n",
+      "          json_out[\"return_val\"] = hook(**hook_input[\"kwargs\"])\n",
+      "                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "        File \"C:\\Users\\maria\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pip\\_vendor\\pyproject_hooks\\_in_process\\_in_process.py\", line 137, in get_requires_for_build_wheel\n",
+      "          backend = _build_backend()\n",
+      "                    ^^^^^^^^^^^^^^^^\n",
+      "        File \"C:\\Users\\maria\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pip\\_vendor\\pyproject_hooks\\_in_process\\_in_process.py\", line 70, in _build_backend\n",
+      "          obj = import_module(mod_path)\n",
+      "                ^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "        File \"C:\\Users\\maria\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\importlib\\__init__.py\", line 90, in import_module\n",
+      "          return _bootstrap._gcd_import(name[level:], package, level)\n",
+      "                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "        File \"<frozen importlib._bootstrap>\", line 1381, in _gcd_import\n",
+      "        File \"<frozen importlib._bootstrap>\", line 1354, in _find_and_load\n",
+      "        File \"<frozen importlib._bootstrap>\", line 1304, in _find_and_load_unlocked\n",
+      "        File \"<frozen importlib._bootstrap>\", line 488, in _call_with_frames_removed\n",
+      "        File \"<frozen importlib._bootstrap>\", line 1381, in _gcd_import\n",
+      "        File \"<frozen importlib._bootstrap>\", line 1354, in _find_and_load\n",
+      "        File \"<frozen importlib._bootstrap>\", line 1325, in _find_and_load_unlocked\n",
+      "        File \"<frozen importlib._bootstrap>\", line 929, in _load_unlocked\n",
+      "        File \"<frozen importlib._bootstrap_external>\", line 994, in exec_module\n",
+      "        File \"<frozen importlib._bootstrap>\", line 488, in _call_with_frames_removed\n",
+      "        File \"C:\\Users\\maria\\AppData\\Local\\Temp\\pip-build-env-kmkxg71b\\overlay\\Lib\\site-packages\\setuptools\\__init__.py\", line 16, in <module>\n",
+      "          import setuptools.version\n",
+      "        File \"C:\\Users\\maria\\AppData\\Local\\Temp\\pip-build-env-kmkxg71b\\overlay\\Lib\\site-packages\\setuptools\\version.py\", line 1, in <module>\n",
+      "          import pkg_resources\n",
+      "        File \"C:\\Users\\maria\\AppData\\Local\\Temp\\pip-build-env-kmkxg71b\\overlay\\Lib\\site-packages\\pkg_resources\\__init__.py\", line 2172, in <module>\n",
+      "          register_finder(pkgutil.ImpImporter, find_on_path)\n",
+      "                          ^^^^^^^^^^^^^^^^^^^\n",
+      "      AttributeError: module 'pkgutil' has no attribute 'ImpImporter'. Did you mean: 'zipimporter'?\n",
+      "      [end of output]\n",
+      "  \n",
+      "  note: This error originates from a subprocess, and is likely not a problem with pip.\n",
+      "error: subprocess-exited-with-error\n",
+      "\n",
+      "× Getting requirements to build wheel did not run successfully.\n",
+      "│ exit code: 1\n",
+      "╰─> See above for output.\n",
+      "\n",
+      "note: This error originates from a subprocess, and is likely not a problem with pip.\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install -r requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "b62b6306",
    "metadata": {
     "ExecuteTime": {
@@ -25,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "5a84f045",
    "metadata": {
     "ExecuteTime": {
@@ -71,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "a72bdf8a",
    "metadata": {
     "ExecuteTime": {
@@ -211,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "53d23277",
    "metadata": {
     "ExecuteTime": {
@@ -256,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "9eddc648",
    "metadata": {
     "ExecuteTime": {
@@ -266,13 +353,15 @@
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\maria\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sdv\\single_table\\base.py:144: FutureWarning: The 'SingleTableMetadata' is deprecated. Please use the new 'Metadata' class for synthesizers.\n",
-      "  warnings.warn(DEPRECATION_MSG, FutureWarning)\n",
-      "c:\\Users\\maria\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sdv\\single_table\\base.py:122: UserWarning: We strongly recommend saving the metadata using 'save_to_json' for replicability in future SDV versions.\n",
-      "  warnings.warn(\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'tabular_llm'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[7], line 20\u001b[0m\n\u001b[0;32m     17\u001b[0m X_train\u001b[38;5;241m.\u001b[39mto_csv(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mX_train_temp.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m, index\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[0;32m     18\u001b[0m y_train\u001b[38;5;241m.\u001b[39mto_frame(name\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSummary Work Effort\u001b[39m\u001b[38;5;124m\"\u001b[39m)\u001b[38;5;241m.\u001b[39mto_csv(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124my_train_temp.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m, index\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[1;32m---> 20\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpred_llm_reg\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m main \u001b[38;5;28;01mas\u001b[39;00m run_pred_llm\n\u001b[0;32m     22\u001b[0m \u001b[38;5;66;03m# Create argument namespace\u001b[39;00m\n\u001b[0;32m     23\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mArgs\u001b[39;00m:\n",
+      "File \u001b[1;32mc:\\Users\\maria\\Documents\\GitHub\\ResearchWorkshop\\pred_llm_reg.py:6\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmetrics\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m mean_squared_error, r2_score\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mxgboost\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m XGBRegressor\n\u001b[1;32m----> 6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtabular_llm\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpredllm_utils\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m _encode_row_partial\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtabular_llm\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpredllm\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m PredLLM\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mread_data\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'tabular_llm'"
      ]
     }
    ],
@@ -290,78 +379,28 @@
     "    X_test[col] = X_test[col].fillna(mode_value)\n",
     "\n",
     "# Data Augmentation\n",
+    "# LLM-based Data Augmentation (after imputation)\n",
     "\n",
-    "# Combine X_train and y_train into one DataFrame\n",
-    "df_ctgan = X_train.copy()\n",
-    "df_ctgan[\"Summary Work Effort\"] = y_train\n",
+    "# Save X_train and y_train temporarily for the Pred-LLM loader\n",
+    "X_train.to_csv(\"X_train_temp.csv\", index=False)\n",
+    "y_train.to_frame(name=\"Summary Work Effort\").to_csv(\"y_train_temp.csv\", index=False)\n",
     "\n",
-    "# Step 2: Detect metadata\n",
-    "metadata = SingleTableMetadata()\n",
-    "metadata.detect_from_dataframe(data=df_ctgan)\n",
+    "from pred_llm_reg import main as run_pred_llm\n",
     "\n",
+    "# Create argument namespace\n",
+    "class Args:\n",
+    "    dataset = \"aug_temp\"\n",
+    "    method = \"pred_llm\"\n",
+    "    trainsize = 1.0\n",
+    "    testsize = 0.0\n",
+    "    gensize = 1.0  # double the data\n",
+    "    runs = 1\n",
     "\n",
-    "# Step 3: Initialize CTGAN with pac=1 to avoid divisibility errors\n",
-    "\"\"\"synthesizer = CTGANSynthesizer(\n",
-    "    metadata=metadata,\n",
-    "    epochs=300,\n",
-    "    batch_size=64,\n",
-    "    embedding_dim=64,\n",
-    "    generator_lr=2e-4,\n",
-    "    discriminator_lr=2e-4,\n",
-    "    pac=1  \n",
-    ")\n",
+    "run_pred_llm(Args())\n",
     "\n",
-    "# Step 4: Fit the model\n",
-    "synthesizer.fit(df_ctgan)\"\"\"\n",
-    "synthesizer = GaussianCopulaSynthesizer(metadata)\n",
-    "synthesizer.fit(df_ctgan)\n",
-    "\n",
-    "# Step 5: Sample synthetic data\n",
-    "synthetic_data = synthesizer.sample(num_rows=int(N_SYNTH_DATA*len(df_ctgan)))\n",
-    "\n",
-    "# Step 6: Separate features and target for later transformation\n",
-    "X_synth = synthetic_data.drop(columns=[\"Summary Work Effort\"])\n",
-    "y_synth = synthetic_data[\"Summary Work Effort\"]\n",
-    "\n",
-    "\"\"\"\n",
-    "from sdv.evaluation.single_table import run_diagnostic\n",
-    "\n",
-    "diagnostic = run_diagnostic(\n",
-    "    real_data=df_ctgan,\n",
-    "    synthetic_data=synthetic_data,\n",
-    "    metadata=metadata\n",
-    ")\n",
-    "\n",
-    "from sdv.evaluation.single_table import evaluate_quality\n",
-    "\n",
-    "quality_report = evaluate_quality(\n",
-    "    df_ctgan,\n",
-    "    synthetic_data,\n",
-    "    metadata\n",
-    ")\"\"\"\n",
-    "\n",
-    "\"\"\"numeric_cols = X_synth.select_dtypes(include=['float64', 'int64']).columns\n",
-    "categorical_cols = X_synth.select_dtypes(include=['object']).columns\n",
-    "\n",
-    "for col in numeric_cols:\n",
-    "    plt.figure(figsize=(8, 4))\n",
-    "    sns.histplot(X_synth[col], kde=True, bins=30)\n",
-    "    plt.title(f'Distribution of {col}')\n",
-    "    plt.xlabel(col)\n",
-    "    plt.ylabel('Count')\n",
-    "    plt.tight_layout()\n",
-    "    plt.show()\n",
-    "\n",
-    "for col in categorical_cols:\n",
-    "    plt.figure(figsize=(8, 4))\n",
-    "    X_synth[col].value_counts().plot(kind='bar')\n",
-    "    plt.title(f'Value Counts of {col}')\n",
-    "    plt.xlabel(col)\n",
-    "    plt.ylabel('Count')\n",
-    "    plt.tight_layout()\n",
-    "    plt.show()\n",
-    "\n",
-    "\"\"\"\n",
+    "# Load generated data into consistent variable names\n",
+    "X_synth = pd.read_csv(\"data/aug_temp/synthetic_X.csv\")\n",
+    "y_synth = pd.read_csv(\"data/aug_temp/synthetic_y.csv\")[\"target\"]\n",
     "\n",
     "# Log transformation for skewed numerical columns\n",
     "skewed = [\"COSMIC Read\", \"COSMIC Write\", \"COSMIC Entry\", \"COSMIC Exit\", \"Max Team Size\"]\n",
